<resources>
    <string name="app_name">Fondos de pantalla</string>
    <string name="desarrollador">Desarrollado Por : Marcos2099x</string>

    <string name="navigation_drawer_open">Open Navigation drawer </string>
    <string name="navigation_drawer_close">Close Navigation drawer </string>

    <!--Menu Admin-->
    <string name="InicioAdmin">inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar Admin</string>
    <string name="listarAdmin">Listar Admin</string>
    <string name="salir">Cerrar Sesion</string>

    <!-- Menu cliente-->
    <string name="opcionestxt">opciones</string>
    <string name="InicioCliente">inicio</string>
    <string name="MasOpcionestxt"> Otra Opcion </string>
    <string name="AcercaDe"> Acerca De </string>
    <string name="Compartir"> Compartir </string>

    <string name="Acceder"> Acceder </string>

    <!-- Registro De Administradores-->
    <string name="RegistroTXT">Registro de Administradores</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos Completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaDeRegistro">Fecha De Registro </string>
    <string name="Registrar">Registrar </string>

    <!-- Login de los Administradores-->
    <string name="LoginTXT">Login de administradores </string>
    <string name="Ingresar">Ingresar </string>


    <!--Categorias-->
    <string name="Eligeunacategoriatxt">Elige Categoria</string>
    <string name="Peliculas">PELICULAS</string>
    <string name="Series">SERIES</string>
    <string name="Musica">MUSICA</string>
    <string name="Videojuegos">VIDEOJUEGOS</string>

    <!--Menu Parte Superior Derecha-->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

    <!--Agregar Peliculas-->
    <string name="NombreTXTPeliculas">Nombre de imagen</string>
    <string name="NombrePeliculas">Escriba nombre aqui</string>
    <string name="VistaPeliculas">0</string>
    <string name="PublicarPeliculas">Publicar</string>
    <string name="ImagenAgregarPelicula"></string>

    <!--Agregar Musica-->
    <string name="NombreTXTMusica">Nombre de imagen</string>
    <string name="NombreMusica">Escriba nombre aqui</string>
    <string name="VistaMusica">0</string>
    <string name="PublicarMusica">Publicar</string>
    <string name="ImagenAgregarMusica"></string>

    <!--Agregar Series-->
    <string name="NombreTXTSerie">Nombre de imagen</string>
    <string name="NombreSerie">Escriba nombre aqui</string>
    <string name="VistaSerie">0</string>
    <string name="PublicarSerie">Publicar</string>
    <string name="ImagenAgregarSerie"></string>

    <!--Agregar Videojuegos-->
    <string name="NombreTXTVideojuegos">Nombre de imagen</string>
    <string name="NombreVideojuegos">Escriba nombre aqui</string>
    <string name="VistaVideojuegos">0</string>
    <string name="PublicarVideojuegos">Publicar</string>
    <string name="ImagenAgregarVideojuegos"></string>


    <!--Item Pelicula-->
    <string name="NombreImagenPelicula">--</string>
    <string name="VistaPelicula">--</string>

    <!--Item Musica-->
    <string name="NombreImagen_Musica">--</string>
    <string name="Vista_Musica">--</string>

    <!--Item Series-->
    <string name="NombreImagen_Serie">--</string>
    <string name="Vista_Serie">--</string>

    <!--Item Videojuegos-->
    <string name="NombreImagen_Videojuegos">--</string>
    <string name="Vista_Videojuegos"></string>

    <!--Dialog Ordenar-->
    <string name="OrdenarTXT">Ordenar En: </string>
    <string name="Dos_columnas">2 Columnas</string>
    <string name="Tres_columnas">3 Columnas</string>

    <!--Perfil-->
    <string name="PERFILADMINISTRADORTXT">MI PERFIL</string>
    <string name="MIINFORMACIONTXT">MI INFORMACION</string>
    <string name="UIDPERFILTXT">Uid: </string>
    <string name="UIDPERFIL"> -- </string>
    <string name="NOMBRESPERFILTXT">Nombres: </string>
    <string name="NOMBRESPERFIL"> -- </string>
    <string name="APELLIDOSPERFILTXT">Apellidos: </string>
    <string name="APELLIDOSPERFIL"> -- </string>
    <string name="CORREOPERFILTXT">Correo: </string>
    <string name="CORREOPERFIL"> -- </string>
    <string name="PASSWORDPERFILTXT">Password: </string>
    <string name="PASSWORDPERFIL"> -- </string>
    <string name="EDADPERFILTXT">Edad: </string>
    <string name="EDADPERFIL"> -- </string>
    <string name="ACTUALIZARPASS">Actualizar Password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>

    <!--Cambiar Contraseña-->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualTXT">Contraseña Actual:</string>
    <string name="PassActual"> -- </string>
    <string name="ActualPassET">Contraseña Actual</string>
    <string name="NuevoPassET">Nueva Contraseña</string>
    <string name="CAMBIARPASSBTN"> CAMBIAR CONTRASEÑA</string>
    <string name="IRINICIOBTN"> IR INICIO </string>
    <string name="NOTATXT">  Si se cambia la contraseña, se cerrara sesion automaticamente</string>

    <!--Administrador Item-->
    <string name="NombresADMIN">Nombres</string>
    <string name="CorreoADMIN">Correo Electronico</string>

    <string name="buscar_administrador">Buscar</string>

    <!--Detalle Admin-->
    <string name="DetalleTxt">Detalle del Administrador</string>
    <string name="UidDetalleAdmin">UID</string>
    <string name="NombresDetalleAdmin">NOMBRES</string>
    <string name="ApellidosDetalleAdmin">APELLIDOS</string>
    <string name="CorreoDetalleAdmin">CORREO</string>
    <string name="EdadDetalleAdmin">EDAD</string>

    <string name="NombreCategoriaD"> -- </string>
    <string name="ImagenCategoriaD"> -- </string>

    <string name="NombreImagenTXT">Fondo De Pantalla</string>
    <string name="NombreImagenDetalle"> -- </string>
    <string name="VisualizacionTXT"> Visualizaciones</string>
    <string name="VistaDetalle"> -- </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>